# solvaris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  citation.cff  pyproject.toml  requirements.txt  setup.py
examples/: quadratic.ipynb
solvaris/: __init__.py  solvaris  wrappers.py
src/: add.f90  quadratic.f90  sub.f90
