[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "solvaris"
version = "0.1.0"
description = "Fortran-backed scientific module"
authors = [{ name = "Samy" }]
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.minimum-version = "3.18"
build-dir = "build/{wheel_tag}"

# This is important: tells scikit-build where your package is
wheel.packages = ["solvaris"]
